# node-libretro

./: CMakeLists.txt  index.js  package.json
lib/: core.cpp  core.h  dynload.h  main.cpp
